# openapi.yaml
@@ -1219,6 +1219,13 @@ paths:
             type: string
             example: "123456789"
           required: false
+        - name: recursive
+          in: query
+          schema:
+                type: boolean
+                example: true
+          required: false
+          description: If true, also returns children of children
       responses:
         "200":
           content:
@@ -1277,6 +1284,13 @@ paths:
             type: string
             example: "123456789"
           required: false
+        - name: recursive
+          in: query
+          schema:
+                    type: boolean
+                    example: true
+          required: false
+          description: If true, also returns children of children
       responses:
         "200":
           content:
@@ -1310,6 +1324,13 @@ paths:
             type: string
             example: "123456789"
           required: false
+        - name: recursive
+          in: query
+          schema:
+                    type: boolean
+                    example: true
+          required: false
+          description: If true, also returns children of children
       responses:
         "200":
           content:
